--- a/user/templates/base.html
+++ b/user/templates/base.html
@@ -96,8 +96,8 @@
                             
                         </div>
                         
-                        <a href="../signup" class="btn btn-primary mr-3 d-none d-lg-block">Register</a>
-                        <a href="../login" class="btn btn-primary mr-3 d-none d-lg-block">Login</a>
+                        <a href="../../signup" class="btn btn-primary mr-3 d-none d-lg-block">Register</a>
+                        <a href="../../login" class="btn btn-primary mr-3 d-none d-lg-block">Login</a>
                     </div>
                 </nav>
             </div>
